--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mrs-client-new",
+  "name": "mrs-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.1",
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^5.0.1",
-    "@tanstack/react-table": "^8.21.2",
-    "@types/yup": "^0.32.0",
-    "axios": "^1.8.4",
-    "framer-motion": "^12.6.3",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
-    "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5",
-    "yup": "^1.6.1"
+    "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-table": "^8.11.8",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.5",
+    "js-cookie": "^3.0.5",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
