--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
+    "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
