--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mrs-client",
+  "name": "nicaa-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,7 +24,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.4",
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "sweetalert": "^2.1.2",
     "swiper": "^11.2.6",
     "yup": "^1.3.3"
