--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "sharp": "^0.34.2",
     "sweetalert": "^2.1.2",
     "swiper": "^11.2.6",
     "yup": "^1.3.3"
